[metadata]
name = tkf
version = file: VERSION
url = https://github.com/pyrustic/tkf
author = Pyrustic Evangelist
author_email = rusticalex@yahoo.com
maintainer = Pyrustic Evangelist
maintainer_email = rusticalex@yahoo.com
description = Tkinter-based framework to build Python apps
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    framework
    tkinter
    GUI
    modern
    productivity
    application
    app
    desktop-application
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    backstage
    cyberpunk-theme
    kurl
    litedao
    litemark
    megawidget
    probed
    shared
    subrun
    suggestion
    threadom
    tkstyle
    tkutil
    viewable
    winter-theme
[options.entry_points]
console_scripts =
    tkf = tkf.__main__:main
